WEB | STYLES | style: improve how the user page looks

--- a/projects/web/templates/base.html.twig
+++ b/projects/web/templates/base.html.twig
@@ -20,6 +20,7 @@
 	<body>
 		{% include 'components/NavBar.html.twig' %}
 		{% block body %}{% endblock %}
+		{% include 'components/Footer.html.twig' %}
 
 		<script src="{{ asset('page/base/menu_navigation.js') }}"></script>
 	</body>
