--- a/projects/web/templates/components/Icon.html.twig
+++ b/projects/web/templates/components/Icon.html.twig
@@ -10,61 +10,62 @@
 {% set color = color|default('currentColor') %}
 
 {% if name == 'paw' %}
-    {% include 'components/icons/paw.html.twig' with {size: size, class: class, color: color} %}
+	{% include 'components/icons/paw.html.twig' with {size: size, class: class, color: color} %}
 {% elseif name == 'home' %}
-    {% include 'components/icons/home.html.twig' with {size: size, class: class, color: color} %}
+	{% include 'components/icons/home.html.twig' with {size: size, class: class, color: color} %}
 {% elseif name == 'search' %}
-    {% include 'components/icons/search.html.twig' with {size: size, class: class, color: color} %}
+	{% include 'components/icons/search.html.twig' with {size: size, class: class, color: color} %}
 {% elseif name == 'heart' %}
-    {% include 'components/icons/heart.html.twig' with {size: size, class: class, color: color} %}
+	{% include 'components/icons/heart.html.twig' with {size: size, class: class, color: color} %}
 {% elseif name == 'plus' %}
-    {% include 'components/icons/plus.html.twig' with {size: size, class: class, color: color} %}
+	{% include 'components/icons/plus.html.twig' with {size: size, class: class, color: color} %}
 {% elseif name == 'user' %}
-    {% include 'components/icons/user.html.twig' with {size: size, class: class, color: color} %}
+	{% include 'components/icons/user.html.twig' with {size: size, class: class, color: color} %}
 {% elseif name == 'menu' %}
-    {% include 'components/icons/menu.html.twig' with {size: size, class: class, color: color} %}
+	{% include 'components/icons/menu.html.twig' with {size: size, class: class, color: color} %}
 {% elseif name == 'chevron-down' %}
-    {% include 'components/icons/chevron-down.html.twig' with {size: size, class: class, color: color} %}
+	{% include 'components/icons/chevron-down.html.twig' with {size: size, class: class, color: color} %}
 {% elseif name == 'chevron-right' %}
-    {% include 'components/icons/chevron-right.html.twig' with {size: size, class: class, color: color} %}
+	{% include 'components/icons/chevron-right.html.twig' with {size: size, class: class, color: color} %}
 {% elseif name == 'x' %}
-    {% include 'components/icons/x.html.twig' with {size: size, class: class, color: color} %}
+	{% include 'components/icons/x.html.twig' with {size: size, class: class, color: color} %}
 {% elseif name == 'map-pin' %}
-    {% include 'components/icons/map-pin.html.twig' with {size: size, class: class, color: color} %}
+	{% include 'components/icons/map-pin.html.twig' with {size: size, class: class, color: color} %}
 {% elseif name == 'phone' %}
-    {% include 'components/icons/phone.html.twig' with {size: size, class: class, color: color} %}
+	{% include 'components/icons/phone.html.twig' with {size: size, class: class, color: color} %}
 {% elseif name == 'alert-triangle' %}
-    {% include 'components/icons/alert-triangle.html.twig' with {size: size, class: class, color: color} %}
+	{% include 'components/icons/alert-triangle.html.twig' with {size: size, class: class, color: color} %}
 {% elseif name == 'check-circle' %}
-    {% include 'components/icons/check-circle.html.twig' with {size: size, class: class, color: color} %}
+	{% include 'components/icons/check-circle.html.twig' with {size: size, class: class, color: color} %}
 {% elseif name == 'info' %}
-    {% include 'components/icons/info.html.twig' with {size: size, class: class, color: color} %}
+	{% include 'components/icons/info.html.twig' with {size: size, class: class, color: color} %}
 {% elseif name == 'list' %}
-    {% include 'components/icons/list.html.twig' with {size: size, class: class, color: color} %}
+	{% include 'components/icons/list.html.twig' with {size: size, class: class, color: color} %}
 {% elseif name == 'mail' %}
-    {% include 'components/icons/mail.html.twig' with {size: size, class: class, color: color} %}
+	{% include 'components/icons/mail.html.twig' with {size: size, class: class, color: color} %}
 {% elseif name == 'arrow-left' %}
-    {% include 'components/icons/arrow-left.html.twig' with {size: size, class: class, color: color} %}
+	{% include 'components/icons/arrow-left.html.twig' with {size: size, class: class, color: color} %}
 {% elseif name == 'share' %}
-    {% include 'components/icons/share.html.twig' with {size: size, class: class, color: color} %}
+	{% include 'components/icons/share.html.twig' with {size: size, class: class, color: color} %}
 {% elseif name == 'image' %}
-    {% include 'components/icons/image.html.twig' with {size: size, class: class, color: color} %}
+	{% include 'components/icons/image.html.twig' with {size: size, class: class, color: color} %}
 {% elseif name == 'gift' %}
-    {% include 'components/icons/gift.html.twig' with {size: size, class: class, color: color} %}
+	{% include 'components/icons/gift.html.twig' with {size: size, class: class, color: color} %}
+{% elseif name == 'log-out' %}
+	{% include 'components/icons/log-out.html.twig' with {size: size, class: class, color: color} %}
+{% elseif name == 'settings' %}
+	{% include 'components/icons/settings.html.twig' with {size: size, class: class, color: color} %}
+{% elseif name == 'edit-2' %}
+	{% include 'components/icons/edit-2.html.twig' with {size: size, class: class, color: color} %}
+{% elseif name == 'archive' %}
+	{% include 'components/icons/archive.html.twig' with {size: size, class: class, color: color} %}
+{% elseif name == 'trash-2' %}
+	{% include 'components/icons/trash-2.html.twig' with {size: size, class: class, color: color} %}
 {% else %}
-    {# Default icon#}
-    <svg xmlns="http://www.w3.org/2000/svg"
-         width="{{ size }}"
-         height="{{ size }}"
-         viewBox="0 0 24 24"
-         fill="none"
-         stroke="{{ color }}"
-         stroke-width="2"
-         stroke-linecap="round"
-         stroke-linejoin="round"
-         class="lucide lucide-help-circle {{ class }}">
-        <circle cx="12" cy="12" r="10"/>
-        <path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/>
-        <line x1="12" x2="12.01" y1="17" y2="17"/>
-    </svg>
+	{# Default icon#}
+	<svg xmlns="http://www.w3.org/2000/svg" width="{{ size }}" height="{{ size }}" viewbox="0 0 24 24" fill="none" stroke="{{ color }}" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-help-circle {{ class }}">
+		<circle cx="12" cy="12" r="10"/>
+		<path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/>
+		<line x1="12" x2="12.01" y1="17" y2="17"/>
+	</svg>
 {% endif %}
