--- a/projects/web/templates/components/icons/archive.html.twig
+++ b/projects/web/templates/components/icons/archive.html.twig
@@ -1,4 +1,4 @@
-{# Plus Icon Component
+{# Archive Icon Component
    Parámetros disponibles:
    - size: tamaño del icono (default: 24)
    - class: clases CSS adicionales (default: '')
@@ -18,7 +18,9 @@
      stroke-width="2"
      stroke-linecap="round"
      stroke-linejoin="round"
-     class="lucide lucide-plus {{ class }}">
-    <path d="M5 12h14"/>
-    <path d="M12 5v14"/>
+     class="lucide lucide-archive {{ class }}">
+    <rect width="20" height="5" x="2" y="3" rx="1"/>
+    <path d="M4 8v11a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8"/>
+    <path d="M9 15h6"/>
+    <path d="M10 11h4"/>
 </svg>
