--- a/projects/web/templates/components/icons/edit-2.html.twig
+++ b/projects/web/templates/components/icons/edit-2.html.twig
@@ -1,4 +1,4 @@
-{# Plus Icon Component
+{# Edit-2 Icon Component
    Parámetros disponibles:
    - size: tamaño del icono (default: 24)
    - class: clases CSS adicionales (default: '')
@@ -18,7 +18,7 @@
      stroke-width="2"
      stroke-linecap="round"
      stroke-linejoin="round"
-     class="lucide lucide-plus {{ class }}">
-    <path d="M5 12h14"/>
-    <path d="M12 5v14"/>
+     class="lucide lucide-edit-2 {{ class }}">
+    <path d="M17 3a2.85 2.83 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5Z"/>
+    <path d="m15 5 4 4"/>
 </svg>
