--- a/projects/web/templates/components/icons/trash-2.html.twig
+++ b/projects/web/templates/components/icons/trash-2.html.twig
@@ -1,4 +1,4 @@
-{# Plus Icon Component
+{# Trash-2 Icon Component
    Parámetros disponibles:
    - size: tamaño del icono (default: 24)
    - class: clases CSS adicionales (default: '')
@@ -18,7 +18,10 @@
      stroke-width="2"
      stroke-linecap="round"
      stroke-linejoin="round"
-     class="lucide lucide-plus {{ class }}">
-    <path d="M5 12h14"/>
-    <path d="M12 5v14"/>
+     class="lucide lucide-trash-2 {{ class }}">
+    <path d="M3 6h18"/>
+    <path d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"/>
+    <path d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"/>
+    <line x1="10" x2="10" y1="11" y2="17"/>
+    <line x1="14" x2="14" y1="11" y2="17"/>
 </svg>
