--- a/projects/web/templates/user/found_pets.html.twig
+++ b/projects/web/templates/user/found_pets.html.twig
@@ -1,6 +1,6 @@
 {% extends 'user/base.html.twig' %}
 
-{% block title %}Mis Animales Encontrados
+{% block title %}Mis Animales Avistados
 {% endblock %}
 
 {% block content %}
