--- a/projects/web/templates/components/UserStats.html.twig
+++ b/projects/web/templates/components/UserStats.html.twig
@@ -26,7 +26,7 @@
                 {% include 'components/Icon.html.twig' with {name: 'heart', size: 24, class: 'text-green-600'} %}
             </div>
             <div class="ml-4">
-                <p class="text-sm font-medium text-gray-600">Animales Encontrados</p>
+                <p class="text-sm font-medium text-gray-600">Animales Avistados</p>
                 <p class="text-2xl font-bold text-gray-900">{{ stats.totalFoundAnimals|default(0) }}</p>
             </div>
         </div>
