--- a/projects/web/templates/user/settings.html.twig
+++ b/projects/web/templates/user/settings.html.twig
@@ -1,6 +1,48 @@
 {% extends 'user/base.html.twig' %}
 
-{% block title %}Configuración de Cuenta
+{% block title %}Mis Animales Avistados
 {% endblock %}
 
-{% block content %}{% endblock %}
+{% block content %}
+	<div
+		class="space-y-6">
+
+		{# Profile Information #}
+		<div class="bg-white rounded-lg shadow">
+			<h3 class="text-lg font-medium text-gray-900 flex items-center">
+				{% include 'components/Icon.html.twig' with {name: 'user', size: 16, class: 'mr-2'} %}
+				Información del Perfil
+			</h3>
+		</div>
+
+		<div class="p-6">
+			<form class="space-y-4">
+				<div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+					<div>
+						<label for="first-name" class="block text-sm font-medium text-gray-700 mb-2">Nombre</label>
+						<input type="text" id="first-name" name="first-name" class="block w-full px-3 py-2 border border-gray-300 rounded-md leading-5 bg-white placeholder-gray-500 focus:outline-none focus:ring-1 focus:ring-blue-500 focus:border-blue-500" value="{{ user.firstName }}">
+					</div>
+					<div>
+						<label for="last-name" class="block text-sm font-medium text-gray-700 mb-2">Apellido</label>
+						<input type="text" id="last-name" name="last-name" class="block w-full px-3 py-2 border border-gray-300 rounded-md leading-5 bg-white placeholder-gray-500 focus:outline-none focus:ring-1 focus:ring-blue-500 focus:border-blue-500" value="{{ user.lastName }}">
+					</div>
+					<div>
+						<label for="email" class="block text-sm font-medium text-gray-700 mb-2">Email</label>
+						<input type="text" id="email" name="email" class="block w-full px-3 py-2 border border-gray-300 rounded-md leading-5 bg-white placeholder-gray-500 focus:outline-none focus:ring-1 focus:ring-blue-500 focus:border-blue-500" value="{{ user.email }}">
+					</div>
+					<div>
+						<label for="phone" class="block text-sm font-medium text-gray-700 mb-2">Teléfono</label>
+						<input type="text" id="phone" name="phone" class="block w-full px-3 py-2 border border-gray-300 rounded-md leading-5 bg-white placeholder-gray-500 focus:outline-none focus:ring-1 focus:ring-blue-500 focus:border-blue-500" value="{{ user.phone }}">
+					</div>
+				</div>
+				<div class="flex" style="justify-content: end;">
+					<button class="btn btn-primary flex items-center">
+                  {# TODO poner un boton de SAVE #}
+						{% include 'components/Icon.html.twig' with {name: 'save', size: 16, class: 'mr-2'} %}
+						Guardar Cambios
+					</button>
+				</div>
+			</form>
+		</div>
+	</div>
+{% endblock %}
