--- a/projects/web/templates/user/found_pets.html.twig
+++ b/projects/web/templates/user/found_pets.html.twig
@@ -89,7 +89,7 @@
 								{% include 'components/Icon.html.twig' with {name: 'archive', size: 16, class: 'mr-1'} %}
 								Archivar
 							</a>
-							<form method="POST" action="{{ path('app_found_pets_delete', {'id': item.id}) }}" class="inline" onsubmit="return confirmDelete('{{ item.animalId.name }}')">
+							<form method="POST" action="{{ path('app_animal_found_delete', {'id': item.id}) }}" class="inline" onsubmit="return confirmDelete('{{ item.animalId.name }}')">
 								<button type="submit" class="flex items-center text-xs sm:text-sm rounded-md btn btn-danger">
 									{% include 'components/Icon.html.twig' with {name: 'trash-2', size: 16, class: 'mr-1'} %}
 									Eliminar
