--- a/projects/web/templates/user/found_pets.html.twig
+++ b/projects/web/templates/user/found_pets.html.twig
@@ -65,7 +65,7 @@
 
 						{# Action Buttons #}
 						<div class="flex flex-wrap gap-2 lg:flex-nowrap lg:items-center lg:space-x-2">
-							<a class="flex items-center text-xs sm:text-sm rounded-md btn btn-primary">
+							<a href="{{ path('app_animal_edit', {'id': item.animalId.id}) }}" class="flex items-center text-xs sm:text-sm rounded-md btn btn-primary">
 								{% include 'components/Icon.html.twig' with {name: 'edit-2', size: 16, class: 'mr-1'} %}
 								Editar
 							</a>
